--- a/hardware/esp/esp/platformio.ini
+++ b/hardware/esp/esp/platformio.ini
@@ -8,7 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
+[env:esp12e]
+platform = espressif8266
+board = esp12e
 framework = arduino
+monitor_speed = 115200
