--- a/rApp/package.json
+++ b/rApp/package.json
@@ -109,10 +109,12 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
