--- a/rApp/package.json
+++ b/rApp/package.json
@@ -113,6 +113,8 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
+    "mqtt": "^4.3.7",
+    "precompiled-mqtt": "^4.3.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
