--- a/rApp/package.json
+++ b/rApp/package.json
@@ -114,6 +114,7 @@
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "mqtt": "^4.3.7",
+    "nanoid": "^4.0.0",
     "precompiled-mqtt": "^4.3.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
