--- a/rApp/package.json
+++ b/rApp/package.json
@@ -110,6 +110,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
