--- a/rApp/package.json
+++ b/rApp/package.json
@@ -121,7 +121,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-player": "^2.11.0",
+    "react-router-dom": "^6.3.0",
+    "react-youtube": "^10.0.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
